# FILE(GLOB SRC *.cpp)

cmake_minimum_required(VERSION 2.6)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIX -D_LINUX=1 -DCMDLINE=1")

SET(SRC
  cppMS5837.cpp
)
ADD_LIBRARY(MS5837 SHARED ${SRC})
TARGET_LINK_LIBRARIES(MS5837 -li2c)
install(TARGETS MS5837 DESTINATION ${project_LIB_DIR}/)
